<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="title">NY Times</string>
    <string name="filter">Filter</string>
    <string name="hint">enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">Article</string>
    <string name="title_activity_settings">Settings</string>
    <string name="arts">Arts</string>
    <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>
    <string name="action_search">search</string>
    <string name="net_error">Network is not available.</string>
    <string name="no_content">No content available.</string>
    <string name="no_doc">No document found.</string>
    <string name="search_err">Search failed. check network.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bdate">Begin Date</string>
    <string name="sort">Sort</string>
    <string name="news">News Desk Values</string>
</resources>
